fix svg overflow

--- a/src/features/CupboardShelfList/ui/ShelfButtons/ShelfButtons.module.scss
+++ b/src/features/CupboardShelfList/ui/ShelfButtons/ShelfButtons.module.scss
@@ -15,6 +15,7 @@
   justify-content: center;
 }
 
+.viewButton > svg,
 .addCardButton > svg {
   overflow: visible;
 }
